[gd_scene load_steps=41 format=1]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://lidia/17.png" type="Texture" id=2]
[ext_resource path="res://lidia/9.png" type="Texture" id=3]
[ext_resource path="res://lidia/10.png" type="Texture" id=4]
[ext_resource path="res://lidia/11.png" type="Texture" id=5]
[ext_resource path="res://lidia/12.png" type="Texture" id=6]
[ext_resource path="res://lidia/13.png" type="Texture" id=7]
[ext_resource path="res://lidia/14.png" type="Texture" id=8]
[ext_resource path="res://lidia/15.png" type="Texture" id=9]
[ext_resource path="res://lidia/16.png" type="Texture" id=10]
[ext_resource path="res://lidia/0.png" type="Texture" id=11]
[ext_resource path="res://lidia/1.png" type="Texture" id=12]
[ext_resource path="res://lidia/2.png" type="Texture" id=13]
[ext_resource path="res://lidia/3.png" type="Texture" id=14]
[ext_resource path="res://lidia/4.png" type="Texture" id=15]
[ext_resource path="res://lidia/5.png" type="Texture" id=16]
[ext_resource path="res://lidia/6.png" type="Texture" id=17]
[ext_resource path="res://lidia/7.png" type="Texture" id=18]
[ext_resource path="res://lidia/8.png" type="Texture" id=19]
[ext_resource path="res://lidia/23.png" type="Texture" id=20]
[ext_resource path="res://lidia/27.png" type="Texture" id=21]
[ext_resource path="res://lidia/28.png" type="Texture" id=22]
[ext_resource path="res://lidia/29.png" type="Texture" id=23]
[ext_resource path="res://lidia/30.png" type="Texture" id=24]
[ext_resource path="res://lidia/31.png" type="Texture" id=25]
[ext_resource path="res://lidia/32.png" type="Texture" id=26]
[ext_resource path="res://lidia/33.png" type="Texture" id=27]
[ext_resource path="res://lidia/34.png" type="Texture" id=28]
[ext_resource path="res://lidia/35.png" type="Texture" id=29]
[ext_resource path="res://lidia/18.png" type="Texture" id=30]
[ext_resource path="res://lidia/19.png" type="Texture" id=31]
[ext_resource path="res://lidia/20.png" type="Texture" id=32]
[ext_resource path="res://lidia/21.png" type="Texture" id=33]
[ext_resource path="res://lidia/22.png" type="Texture" id=34]
[ext_resource path="res://lidia/24.png" type="Texture" id=35]
[ext_resource path="res://lidia/25.png" type="Texture" id=36]
[ext_resource path="res://lidia/26.png" type="Texture" id=37]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 40.4755
height = 119.05

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "WalkLeft",
"speed": 8.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "IdleUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "WalkUp",
"speed": 8.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "IdleDown",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "WalkRight",
"speed": 8.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 20 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "WalkDown",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "IdleLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "IdleRight",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 123.451

[node name="Player" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 18 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
character_path = null
dialogue_box_path = null
inventory_path = null

[node name="AnimSprite" type="AnimatedSprite" parent="."]

transform/scale = Vector2( 4, 4 )
frames = SubResource( 2 )
animation = "IdleDown"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 18 )
z/z = 1
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Radar" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 16 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Radar"]

transform/pos = Vector2( 0, 16 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[connection signal="area_enter" from="Radar" to="." method="_on_Radar_area_enter"]

[connection signal="body_enter" from="Radar" to="." method="_on_Radar_body_enter"]


